--- a/package.json
+++ b/package.json
@@ -4,23 +4,27 @@
 	"private": true,
 	"dependencies": {
 		"@electron/remote": "^1.1.0",
+		"@material-ui/core": "^4.12.3",
+		"@material-ui/icons": "^4.11.2",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"concurrently": "^6.2.0",
 		"cross-env": "^7.0.3",
+		"draft-js": "^0.11.7",
 		"electron": "^13.0.1",
 		"electron-builder": "^22.11.7",
 		"electron-is-dev": "^2.0.0",
 		"firebase": "^8.6.7",
 		"react": "^17.0.2",
 		"react-background-animation": "^1.0.1",
-		"react-circular-progressbar": "^2.0.4",
 		"react-dom": "^17.0.2",
 		"react-file-drop": "^3.1.2",
 		"react-parallax-tilt": "^1.5.23",
+		"react-player": "^2.9.0",
 		"react-scripts": "4.0.3",
 		"react-slideshow-image": "^3.4.6",
+		"react-video-thumbnail": "^0.1.3",
 		"wait-on": "^5.3.0",
 		"web-vitals": "^1.0.1"
 	},
