--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
 		"react-file-drop": "^3.1.2",
 		"react-parallax-tilt": "^1.5.23",
 		"react-player": "^2.9.0",
+		"react-redux": "^7.2.4",
 		"react-scripts": "4.0.3",
 		"react-slideshow-image": "^3.4.6",
+		"react-spinners": "^0.11.0",
 		"react-video-thumbnail": "^0.1.3",
+		"redux": "^4.1.1",
 		"wait-on": "^5.3.0",
 		"web-vitals": "^1.0.1"
 	},
