--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-parallax-tilt": "^1.5.23",
 		"react-player": "^2.9.0",
 		"react-redux": "^7.2.4",
+		"react-responsive-masonry": "^2.1.3",
 		"react-scripts": "4.0.3",
 		"react-slideshow-image": "^3.4.6",
 		"react-spinners": "^0.11.0",
